fix: hidden ooui window manager inside VE toolbar on small viewport (#369)

--- a/skinStyles/extensions/VisualEditor/ext.visualEditor.less
+++ b/skinStyles/extensions/VisualEditor/ext.visualEditor.less
@@ -42,15 +42,20 @@
 					background-color: transparent;
 				}
 
-				> .oo-ui-toolbar-actions {
-					order: 9999; // Set to the right
-					border-left: 1px solid var( --border-color-base );
-				}
-
 				> .oo-ui-toolbar-tools {
+					flex-basis: 50%;
 					flex-grow: 1;
 					overflow-x: auto;
 					overflow-y: hidden;
+				}
+
+				> .oo-ui-toolbar-actions {
+					order: 5; // Second order
+					border-left: 1px solid var( --border-color-base );
+				}
+
+				> .oo-ui-windowManager {
+					order: 10; // Third order
 				}
 
 				.oo-ui-toolbar-tools {
@@ -127,6 +132,10 @@
 			color: var( --color-base--subtle );
 		}
 	}
+
+	.oo-ui-toolbar-position-top .ve-ui-toolbarDialog-position-above {
+		border-color: var( --border-color-base--darker );
+	}
 }
 
 // Fix weird compressed text bug
@@ -166,6 +175,7 @@
 
 	.ve-ui-toolbar > .oo-ui-toolbar-bar {
 		display: flex;
+		flex-wrap: wrap;
 	}
 
 	.ve-init-mw-desktopArticleTarget {
